# python-click-demo

./: pyproject.toml
python_click_demo/: main.py
python_click_demo/commands/: command_a.py  command_b.py
