[tool.poetry]
name = "python-click-demo"
version = "0.1.0"
description = ""
authors = ["Calvin Kamtoso <calvinkmts@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
click = "^8.1.7"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
cli = "python_click_demo.main:cli"